--- a/.github/workflows/docker-publish.yaml
+++ b/.github/workflows/docker-publish.yaml
@@ -142,12 +142,22 @@ jobs:
         id: meta-bundle
         uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
         with:
-          images: '${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-bundle'
+          images: '${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}'
 
       - name: Make bundle
         id: make-bundle
         run: |
-          make bundle IMG='${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-bundle:v${{ env.RELEASE }}' VERSION='${{ env.RELEASE }}'
+          export ARCH=$(case $(uname -m) in x86_64) echo -n amd64 ;; aarch64) echo -n arm64 ;; *) echo -n $(uname -m) ;; esac)
+          export OS=$(uname | awk '{print tolower($0)}')
+          export OPERATOR_SDK_DL_URL=https://github.com/operator-framework/operator-sdk/releases/download/v1.17.0
+          curl -LO ${OPERATOR_SDK_DL_URL}/operator-sdk_${OS}_${ARCH}
+          gpg --keyserver keyserver.ubuntu.com --recv-keys 052996E2A20B5C7E
+          curl -LO ${OPERATOR_SDK_DL_URL}/checksums.txt
+          curl -LO ${OPERATOR_SDK_DL_URL}/checksums.txt.asc
+          gpg -u "Operator SDK (release) <cncf-operator-sdk@cncf.io>" --verify checksums.txt.asc
+          grep operator-sdk_${OS}_${ARCH} checksums.txt | sha256sum -c -
+          chmod +x operator-sdk_${OS}_${ARCH} && sudo mv operator-sdk_${OS}_${ARCH} /usr/local/bin/operator-sdk
+          make bundle IMG='${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.RELEASE }}' VERSION='${{ env.RELEASE:1 }}'
 
       # Build and push Docker image bundle with Buildx
       - name: Build and push bundle image
@@ -159,7 +169,7 @@ jobs:
           platforms: linux/amd64,linux/arm/v7,linux/arm64
           push: true
           labels: ${{ steps.meta-bundle.outputs.labels }}
-          tags: 'v${{ env.RELEASE }}'
+          tags: '${{ env.RELEASE }}'
 
       # Sign the resulting Docker image digest except on PRs.
       # This will only write to the public Rekor transparency log when the Docker
