--- a/.github/workflows/docker-publish.yaml
+++ b/.github/workflows/docker-publish.yaml
@@ -9,7 +9,7 @@ on:
   schedule:
     - cron: "43 9 * * *"
   push:
-    branches: [fix-ci]
+    branches: [main]
     # Publish semver tags as releases.
     tags: ["v*.*.*"]
 
