Changed trigger  for helm release
Signed-off-by: Harsha <harshaisgud@gmail.com>

--- a/charts/mondoo-operator/values.yaml
+++ b/charts/mondoo-operator/values.yaml
@@ -6,7 +6,7 @@ controllerManager:
   manager:
     image:
       repository: ghcr.io/mondoohq/mondoo-operator
-      tag: v0.0.1
+      tag: latest
     resources:
       limits:
         cpu: 200m
