🐛 fix helm release task (#115)
* check-release
* changed trigger for helm release

Signed-off-by: Harsha <harshaisgud@gmail.com>

--- a/.github/workflows/helm-release.yaml
+++ b/.github/workflows/helm-release.yaml
@@ -2,8 +2,8 @@ name: Release Charts
 
 on:
   push:
-    # Publish semver tags as releases.
-    tags: ["v*.*.*"]
+    branches:
+      - "main"
 
 jobs:
   release:
