--- a/.github/workflows/generate-manifests.yaml
+++ b/.github/workflows/generate-manifests.yaml
@@ -1,9 +1,15 @@
 name: generate-manifests
 on:
   push:
-    branches:
-      - "main"
     tags: ["v*.*.*"]
+
+env:
+  # Use docker.io for Docker Hub if empty
+  REGISTRY: ghcr.io
+  # github.repository as <account>/<repo>
+  IMAGE_NAME: ${{ github.repository }}
+  RELEASE: ${{ github.ref_name }}
+
 jobs:
   generate-manifests:
     runs-on: ubuntu-latest
@@ -17,9 +23,8 @@ jobs:
         with:
           go-version: "${{ env.golang-version }}"
       - name: Generate manifests 
-        run: make generate-manifests
+        run: make generate-manifests IMG='${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.RELEASE }}' 
       - name: Release
         uses: softprops/action-gh-release@v1
-        if: startsWith(github.ref, 'refs/tags/')
         with:
           files: mondoo-operator-manifests.yaml
