--- a/.github/workflows/docker-publish.yaml
+++ b/.github/workflows/docker-publish.yaml
@@ -95,6 +95,8 @@ jobs:
   build-bundle:
     if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')
     runs-on: ubuntu-latest
+    needs:
+      - build-operator
     permissions:
       contents: read
       packages: write
