--- a/.github/workflows/bundle-publish.yaml
+++ b/.github/workflows/bundle-publish.yaml
@@ -1,4 +1,4 @@
-name: Docker
+name: bundle-publish 
 
 # This workflow uses actions that are not certified by GitHub.
 # They are provided by a third-party and are governed by
@@ -6,12 +6,13 @@ name: Docker
 # documentation.
 
 on:
-  schedule:
-    - cron: "43 9 * * *"
   push:
-    branches: [main]
     # Publish semver tags as releases.
     tags: ["v*.*.*"]
+  workflow_run:
+    workflows: [Docker]
+    types:
+      - completed
 
 env:
   # Use docker.io for Docker Hub if empty
@@ -21,7 +22,7 @@ env:
   RELEASE: ${{ github.ref_name }}
 
 jobs:
-  build-operator:
+  build-bundle:
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -29,10 +30,14 @@ jobs:
       # This is used to complete the identity challenge
       # with sigstore/fulcio when running outside of PRs.
       id-token: write
-
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v2
+      - name: Import environment variables from file
+        run: cat ".github/env" >> $GITHUB_ENV
+      - name: Install Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: "${{ env.golang-version }}"
 
       # Install the cosign tool except on PR
       # https://github.com/sigstore/cosign-installer
@@ -60,25 +65,40 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Make bundle
+        id: make-bundle
+        run: |
+          export ARCH=$(case $(uname -m) in x86_64) echo -n amd64 ;; aarch64) echo -n arm64 ;; *) echo -n $(uname -m) ;; esac)
+          export OS=$(uname | awk '{print tolower($0)}')
+          export OPERATOR_SDK_DL_URL=https://github.com/operator-framework/operator-sdk/releases/download/v1.17.0
+          curl -LO ${OPERATOR_SDK_DL_URL}/operator-sdk_${OS}_${ARCH}
+          gpg --keyserver keyserver.ubuntu.com --recv-keys 052996E2A20B5C7E
+          curl -LO ${OPERATOR_SDK_DL_URL}/checksums.txt
+          curl -LO ${OPERATOR_SDK_DL_URL}/checksums.txt.asc
+          gpg -u "Operator SDK (release) <cncf-operator-sdk@cncf.io>" --verify checksums.txt.asc
+          grep operator-sdk_${OS}_${ARCH} checksums.txt | sha256sum -c -
+          chmod +x operator-sdk_${OS}_${ARCH} && sudo mv operator-sdk_${OS}_${ARCH} /usr/local/bin/operator-sdk
+          make bundle IMG='${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.RELEASE }}' VERSION='${{ env.RELEASE }}'
+
       # Extract metadata (tags, labels) for Docker
       # https://github.com/docker/metadata-action
       - name: Extract Docker metadata
-        id: meta
+        id: meta-bundle
         uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
         with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-      
-      # Build and push Docker image with Buildx
-      # https://github.com/docker/build-push-action
-      - name: Build and push operator image
-        id: build-and-push-operator
+          images: '${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-bundle'
+
+      # Build and push Docker image bundle with Buildx
+      - name: Build and push bundle image
+        id: build-and-push-bundle
         uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
         with:
           context: .
+          file: bundle.Dockerfile
           platforms: linux/amd64,linux/arm/v7,linux/arm64
           push: true
-          labels: ${{ steps.meta.outputs.labels }}
-          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta-bundle.outputs.labels }}
+          tags: ${{ steps.meta-bundle.outputs.tags }}
 
       # Sign the resulting Docker image digest except on PRs.
       # This will only write to the public Rekor transparency log when the Docker
@@ -90,4 +110,4 @@ jobs:
           COSIGN_EXPERIMENTAL: "true"
         # This step uses the identity token to provision an ephemeral certificate
         # against the sigstore community Fulcio instance.
-        run: cosign sign ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}@${{ steps.build-and-push-operator.outputs.digest }}
+        run: cosign sign ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}@${{ steps.build-and-push-bundle.outputs.digest }}
