--- a/.github/workflows/e2e-olm.yaml
+++ b/.github/workflows/e2e-olm.yaml
@@ -61,7 +61,7 @@ jobs:
           kubectl create secret generic mondoo-client --namespace mondoo-operator-system --from-file=config=creds.yaml
       - name: Run e2e test with olm
         run: |
-          operator-sdk run bundle '${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-bundle:${{ env.REGISTRY }}' --namespace mondoo-operator-system
+          operator-sdk run bundle '${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-bundle:${{ env.RELEASE}}' --namespace mondoo-operator-system
           kubectl apply -f config/samples/k8s_v1alpha1_mondooauditconfig.yaml
           make test/deployment
           operator-sdk cleanup mondoo-operator --namespace mondoo-operator-system
