--- a/config/crd/bases/k8s.mondoo.com_mondooauditconfigs.yaml
+++ b/config/crd/bases/k8s.mondoo.com_mondooauditconfigs.yaml
@@ -47,6 +47,26 @@ spec:
                   inventory:
                     type: string
                 type: object
+              webhooks:
+                properties:
+                  certificateConfig:
+                    description: CertificateConfig allows defining which certificate
+                      system to use. Leaving it as the empty string will mean the
+                      user will be responsible for creating the Secret with the TLS
+                      data, and inserting the CA data into the ValidatingWebhookConfigurations
+                      as well.
+                    properties:
+                      injectionStyle:
+                        enum:
+                        - ""
+                        - cert-manager
+                        type: string
+                    type: object
+                  enable:
+                    type: boolean
+                required:
+                - enable
+                type: object
               workloads:
                 properties:
                   enable:
