Consolidate docker-build
Signed-off-by: Harsha <harshaisgud@gmail.com>

--- a/.github/workflows/helm-release.yaml
+++ b/.github/workflows/helm-release.yaml
@@ -53,7 +53,7 @@ jobs:
           make test/deployment
           helm uninstall mondoo-operator  --namespace mondoo-operator-system 
 
-      # - name: Run chart-releaser
-      #   uses: helm/chart-releaser-action@v1.3.0
-      #   env:
-      #     CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+      - name: Run chart-releaser
+        uses: helm/chart-releaser-action@v1.3.0
+        env:
+          CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
