--- a/operatorhub/mondoo-operator/0.0.10/mondoo-operator.clusterserviceversion.yaml
+++ b/operatorhub/mondoo-operator/0.0.10/mondoo-operator.clusterserviceversion.yaml
@@ -24,7 +24,7 @@ metadata:
         }
       ]
     capabilities: Full Lifecycle
-    categories: infrastructure security
+    categories: Security
     certified: "false"
     containerImage: foo
     createdAt: foo
