--- a/operators/mondoo-operator/ci.yaml
+++ b/operators/mondoo-operator/ci.yaml
@@ -1,4 +1,7 @@
 ---
 # Use `replaces-mode` or `semver-mode`. Once you switch to `semver-mode`, there is no easy way back.
-updateGraph: semver-mode
+updateGraph: replaces-mode
 reviewers:
+  - harshaisgud
+  - jensgrnb 
+  - chris-rock
