--- a/config/crd/bases/k8s.mondoo.com_mondooauditconfigs.yaml
+++ b/config/crd/bases/k8s.mondoo.com_mondooauditconfigs.yaml
@@ -46,6 +46,8 @@ spec:
                     type: boolean
                   inventory:
                     type: string
+                  serviceAccount:
+                    type: string
                 type: object
               workloads:
                 properties:
