--- a/config/samples/k8s_v1alpha1_mondooauditconfig.yaml
+++ b/config/samples/k8s_v1alpha1_mondooauditconfig.yaml
@@ -7,9 +7,9 @@ spec:
   workloads:
     enable: true
     serviceAccount: mondoo-operator-workload
+    tag: latest
   nodes:
     enable: true
-  webhooks:
-    enable: false
+    tag: latest
   mondooSecretRef: mondoo-client
   
