--- a/config/crd/bases/k8s.mondoo.com_mondooauditconfigs.yaml
+++ b/config/crd/bases/k8s.mondoo.com_mondooauditconfigs.yaml
@@ -46,6 +46,8 @@ spec:
                     type: boolean
                   inventory:
                     type: string
+                  tag:
+                    type: string
                 type: object
               webhooks:
                 properties:
@@ -76,6 +78,8 @@ spec:
                     type: string
                   serviceAccount:
                     description: Replicas               int32  `json:"replicas,omitempty"`
+                    type: string
+                  tag:
                     type: string
                 type: object
             required:
