--- a/config/rbac/role_nodes.yaml
+++ b/config/rbac/role_nodes.yaml
@@ -3,6 +3,6 @@ kind: Role
 metadata:
   name: nodes
 rules:
-- apiGroups: [""] # "" indicates the core API group
+- apiGroups: ["*"] # "" indicates the core API group
   resources: ["pods"]
   verbs: ["get", "watch", "list"]
