add support for OpenShift TLS certificate injection
This just involves annotating the Service fronting the webhook and
annotating the ValidatingWebhookConfiguration to inject the CA data.

Signed-off-by: Joel Diaz <joel@mondoo.com>

--- a/config/crd/bases/k8s.mondoo.com_mondooauditconfigs.yaml
+++ b/config/crd/bases/k8s.mondoo.com_mondooauditconfigs.yaml
@@ -60,6 +60,7 @@ spec:
                         enum:
                         - ""
                         - cert-manager
+                        - openshift
                         type: string
                     type: object
                   enable:
