full image reference in crd
Signed-off-by: jensgrnb <jens.grunborg@endocode.com>

--- a/config/samples/k8s_v1alpha1_mondooauditconfig.yaml
+++ b/config/samples/k8s_v1alpha1_mondooauditconfig.yaml
@@ -4,11 +4,16 @@ metadata:
   name: mondoo-client
   namespace: mondoo-operator
 spec:
-  tag: latest
   workloads:
     enable: true
     serviceAccount: mondoo-operator-workload
+    image:
+      name: docker.io/mondoolabs/mondoo
+      tag: latest
   nodes:
     enable: true
+    image:
+      name: docker.io/mondoolabs/mondoo
+      tag: latest
   mondooSecretRef: mondoo-client
   
