full image reference in crd
Signed-off-by: jensgrnb <jens.grunborg@endocode.com>

--- a/config/crd/bases/k8s.mondoo.com_mondooauditconfigs.yaml
+++ b/config/crd/bases/k8s.mondoo.com_mondooauditconfigs.yaml
@@ -44,15 +44,27 @@ spec:
                 properties:
                   enable:
                     type: boolean
+                  image:
+                    properties:
+                      name:
+                        type: string
+                      tag:
+                        type: string
+                    type: object
                   inventory:
                     type: string
                 type: object
-              tag:
-                type: string
               workloads:
                 properties:
                   enable:
                     type: boolean
+                  image:
+                    properties:
+                      name:
+                        type: string
+                      tag:
+                        type: string
+                    type: object
                   inventory:
                     type: string
                   serviceAccount:
