--- a/.github/workflows/helm-release.yaml
+++ b/.github/workflows/helm-release.yaml
@@ -39,19 +39,19 @@ jobs:
       - name: Create and Install Helm chart
         run: |
           echo ${{ secrets.MONDOO_CLIENT }} > creds.yaml
-          kubectl create namespace mondoo-operator-system
-          kubectl create secret generic mondoo-client --namespace mondoo-operator-system --from-file=config=creds.yaml 
-          helm install mondoo-operator charts/mondoo-operator --namespace mondoo-operator-system 
+          kubectl create namespace mondoo-operator
+          kubectl create secret generic mondoo-client --namespace mondoo-operator --from-file=config=creds.yaml 
+          helm install mondoo-operator charts/mondoo-operator --namespace mondoo-operator 
           kubectl apply -f config/samples/k8s_v1alpha1_mondooauditconfig.yaml
 
       - name: Verify Mondoo Operator Helm Chart
         run: |
-          kubectl wait --for=condition=Ready pod -l control-plane=controller-manager --namespace mondoo-operator-system 
-          kubectl wait --for=condition=Ready pod -l mondoo_cr=mondoo-client --namespace mondoo-operator-system --timeout=300s
+          kubectl wait --for=condition=Ready pod -l control-plane=controller-manager --namespace mondoo-operator 
+          kubectl wait --for=condition=Ready pod -l mondoo_cr=mondoo-client --namespace mondoo-operator --timeout=300s
           curl -sSL http://mondoo.io/download.sh | bash
           mv mondoo /usr/local/bin/ 
           make test/deployment
-          helm uninstall mondoo-operator  --namespace mondoo-operator-system 
+          helm uninstall mondoo-operator  --namespace mondoo-operator 
 
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.3.0
