--- a/config/samples/k8s_v1alpha1_mondooauditconfig.yaml
+++ b/config/samples/k8s_v1alpha1_mondooauditconfig.yaml
@@ -2,7 +2,7 @@ apiVersion: k8s.mondoo.com/v1alpha1
 kind: MondooAuditConfig
 metadata:
   name: mondoo-client
-  namespace: mondoo-operator-system
+  namespace: mondoo-operator
 spec:
   workloads:
     enable: true
