--- a/config/webhook/kustomization.yaml
+++ b/config/webhook/kustomization.yaml
@@ -1,6 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: mondoo-operator-system
+namespace: mondoo-operator
 namePrefix: mondoo-operator-
 resources:
 - deployment.yaml
