fixing rebase problems
Signed-off-by: jensgrnb <jens.grunborg@endocode.com>

--- a/config/samples/k8s_v1alpha1_mondooauditconfig.yaml
+++ b/config/samples/k8s_v1alpha1_mondooauditconfig.yaml
@@ -7,13 +7,9 @@ spec:
   workloads:
     enable: true
     serviceAccount: mondoo-operator-workload
-    image:
-      name: docker.io/mondoolabs/mondoo
-      tag: latest
   nodes:
     enable: true
-    image:
-      name: docker.io/mondoolabs/mondoo
-      tag: latest
+  webhooks:
+    enable: false
   mondooSecretRef: mondoo-client
   
