⭐️ allow users to overwrite mondoo client image/tag (#144)
* exposing image / tag configuration to mondoo audit config
* resolve tags to shas before deployment

Signed-off-by: jensgrnb <jens.grunborg@endocode.com>

* Update api/v1alpha1/mondooauditconfig_types.go

Co-authored-by: Joel Diaz <joel@mondoo.com>
Signed-off-by: jensgrnb <jens.grunborg@endocode.com>

* combine duplicate code

Combine the two identical image/tag resolution paths into a shared function that can then be called where appropriate when generating the resources for workload and node scanning.

Signed-off-by: Joel Diaz <joel@mondoo.com>

Co-authored-by: Joel Diaz <joel@mondoo.com>

--- a/config/crd/bases/k8s.mondoo.com_mondooauditconfigs.yaml
+++ b/config/crd/bases/k8s.mondoo.com_mondooauditconfigs.yaml
@@ -44,6 +44,13 @@ spec:
                 properties:
                   enable:
                     type: boolean
+                  image:
+                    properties:
+                      name:
+                        type: string
+                      tag:
+                        type: string
+                    type: object
                   inventory:
                     type: string
                 type: object
@@ -72,6 +79,13 @@ spec:
                 properties:
                   enable:
                     type: boolean
+                  image:
+                    properties:
+                      name:
+                        type: string
+                      tag:
+                        type: string
+                    type: object
                   inventory:
                     type: string
                   serviceAccount:
