🧹 patch olm bundle description during generation
Signed-off-by: jensgrnb <jens.grunborg@endocode.com>

--- a/config/manifests/bases/mondoo-operator.clusterserviceversion.yaml
+++ b/config/manifests/bases/mondoo-operator.clusterserviceversion.yaml
@@ -3,7 +3,7 @@ kind: ClusterServiceVersion
 metadata:
   annotations:
     alm-examples: '[]'
-    capabilities: Full Lifecycle
+    capabilities: Basic Install 
     categories: Security
     certified: "false"
     containerImage: ghcr.io/mondoohq/mondoo-operator:v0.0.10
