add registry scanning fields for MondooAuditConfig
Extend MondooAuditConfig with a 'Registries' section.

It can hold a list of registry names/urls/endpoints that can be used to build a config to pass to the mondoo-client for scanning.
Rather than just a list of strings, each "registry" entry in the list is a distinct struct to allow more easily extending each entry with additional configuration fields in the future (things like scanning only specific repos, adding references to authentication for individual registries, etc).

Signed-off-by: Joel Diaz <joel@mondoo.com>

--- a/config/crd/bases/k8s.mondoo.com_mondooauditconfigs.yaml
+++ b/config/crd/bases/k8s.mondoo.com_mondooauditconfigs.yaml
@@ -36,6 +36,24 @@ spec:
           spec:
             description: MondooAuditConfigSpec defines the desired state of MondooAuditConfig
             properties:
+              containerRegistries:
+                description: ContainerRegistries defines the configuration for container
+                  registry scanning.
+                properties:
+                  enable:
+                    type: boolean
+                  registries:
+                    items:
+                      description: Registry holds all the data related to a single
+                        container image registry.
+                      properties:
+                        registry:
+                          type: string
+                      required:
+                      - registry
+                      type: object
+                    type: array
+                type: object
               mondooSecretRef:
                 type: string
               nodes:
